# grpo-composer

./: .gitignore  CITATION.cff  LICENSE  README.md  Recovery_Proofs_Detailed.tex  Unified_GRPO_Framework_v4_Complete.tex  project_structure.md  pyproject.toml  test_omegaconf.py
configs/: amir_grpo_13b.yaml  base_grpo.yaml  custom_mix.yaml  dapo_7b.yaml  daro_7b.yaml  dr_grpo_7b.yaml  grpo_lead_7b.yaml  tic_grpo_7b.yaml  tr_grpo_7b.yaml
configs/data/: README.md  aime.yaml  amc.yaml  code_contests.yaml  dapo_math_17k.yaml  gpqa.yaml  gsm8k.yaml  humaneval.yaml  livecodebench.yaml  math.yaml  mbpp.yaml
configs/papers/: amir_grpo.yaml  dapo.yaml  daro.yaml  dr_grpo.yaml  dra_grpo.yaml  gapo.yaml  gdpo.yaml  grpo_lead.yaml  info_grpo.yaml  krpo.yaml  lambda_grpo.yaml  ms_grpo.yaml  p_grpo.yaml  posterior_grpo.yaml  pvpo.yaml  rank_grpo.yaml  rewarding_unlikely.yaml  spo.yaml  stratified_grpo.yaml  tic_grpo.yaml  tr_grpo.yaml  xrpo.yaml
docs/: getting_started.md  index.md  repository_state_and_experiment_guide.md  reproducibility.md
docs/api/: reference.md
docs/concepts/: components.md
docs/tutorials/: combining_techniques.md  creating_custom_components.md  reproducing_papers.md
examples/: README.md  diverse_explorer.yaml  kalman_dapo.yaml  lambda_lead.yaml  rank_sharp_grpo.yaml  stable_explorer.yaml  stratified_dapo.yaml
grpo_composer/: __init__.py  runtime_stack.py
grpo_composer/advantages/: base.py  decoupled.py  kalman.py  length_corrected.py  multi_scale.py  novelty_sharpening.py  standard.py  static_value.py  stratified.py  unbiased.py
grpo_composer/aggregation/: base.py  difficulty_weighted.py  global_token.py  group_learnable.py  group_uniform.py  token_mean.py  token_sum.py  trajectory_level.py  weighted_token.py
grpo_composer/clipping/: base.py  trajectory_level.py
grpo_composer/config/: __init__.py  sanity.py
grpo_composer/core/: __init__.py
grpo_composer/data/: __init__.py  data_collator.py  dataloader.py  preprocessing.py  tokenization.py
grpo_composer/integrations/: accelerate.py  hf_trainer.py  trl.py
grpo_composer/interfaces/: __init__.py  buffer.py  config.py  distributed_engine.py  generator.py  inference_engine.py  ref_updater.py  reference_model.py  request_queue.py  reward_model.py  sampler.py  trainer.py  training_engine.py
grpo_composer/losses/: __init__.py  base.py
grpo_composer/models/: __init__.py  pretrained.py  reference_sync.py
grpo_composer/regularizers/: mutual_information.py  preference.py
grpo_composer/rewards/: __init__.py  base.py  binary.py  diversity_adjusted.py  frequency_aware.py  length_dependent.py  multi_reward.py  posterior_composite.py  rank_enhanced.py  rts_based.py
grpo_composer/rollouts/: __init__.py  collator.py  coordinator.py  scheduler.py  storage.py  worker.py
grpo_composer/sampling/: base.py  difficulty_grouped.py  dynamic.py  gt_injection.py  hierarchical.py  standard.py
scripts/: launcher_common.py  modal_app.py  patch_verl_collective_rpc.py  patch_verl_loss_registry.py  prepare _dataset.py  prepare_dataset.py  runtime_stack.py  train.sh  train_grpo.py  train_local.py  train_modal.py  train_multinode.sh  training_config.py  training_runner.py
tests/: test_launcher_common.py
(+100 files in other folders)
